--- a/package.json
+++ b/package.json
@@ -10,14 +10,29 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "next": "13.1.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "reactflow": "11.5.3",
+    "zustand": "4.3.2",
+    "react-use": "17.4.0",
+    "classnames": "2.3.2",
+    "@radix-ui/react-dropdown-menu": "2.0.2",
+    "lucide-react": "0.109.0",
+    "openai": "3.1.0",
+    "dagre": "0.8.5"
+  },
+  "devDependencies": {
+    "autoprefixer": "10.4.13",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
-    "next": "13.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "postcss": "8.4.21",
+    "prisma": "4.9.0",
+    "typescript": "4.9.5",
+    "tailwindcss": "3.2.4",
+    "@types/dagre": "0.7.48"
   }
 }
