improve node generation and landing

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "dagre": "0.8.5",
     "@radix-ui/react-popover": "1.0.3",
     "@radix-ui/react-select": "1.2.0",
-    "@radix-ui/react-label": "2.0.0"
+    "@radix-ui/react-label": "2.0.0",
+    "class-variance-authority": "0.4.0",
+    "@radix-ui/react-aspect-ratio": "1.0.1"
   },
   "devDependencies": {
     "autoprefixer": "10.4.13",
