--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@radix-ui/react-label": "2.0.0",
     "class-variance-authority": "0.4.0",
     "@radix-ui/react-aspect-ratio": "1.0.1",
-    "@vercel/analytics": "0.1.10"
+    "@vercel/analytics": "0.1.10",
+    "@radix-ui/react-menubar": "1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "10.4.13",
