--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "class-variance-authority": "0.4.0",
     "@radix-ui/react-aspect-ratio": "1.0.1",
     "@vercel/analytics": "0.1.10",
-    "@radix-ui/react-menubar": "1.0.0"
+    "@radix-ui/react-menubar": "1.0.0",
+    "@radix-ui/react-dialog": "1.0.2"
   },
   "devDependencies": {
     "autoprefixer": "10.4.13",
