--- a/package.json
+++ b/package.json
@@ -6,41 +6,44 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --ignore-path .gitignore --write ."
   },
   "dependencies": {
     "@next/font": "13.1.6",
-    "next": "13.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "reactflow": "11.5.3",
-    "zustand": "4.3.2",
-    "react-use": "17.4.0",
-    "classnames": "2.3.2",
+    "@radix-ui/react-aspect-ratio": "1.0.1",
+    "@radix-ui/react-dialog": "1.0.2",
     "@radix-ui/react-dropdown-menu": "2.0.2",
-    "lucide-react": "0.109.0",
-    "openai": "3.1.0",
-    "dagre": "0.8.5",
+    "@radix-ui/react-label": "2.0.0",
+    "@radix-ui/react-menubar": "1.0.0",
     "@radix-ui/react-popover": "1.0.3",
     "@radix-ui/react-select": "1.2.0",
-    "@radix-ui/react-label": "2.0.0",
-    "class-variance-authority": "0.4.0",
-    "@radix-ui/react-aspect-ratio": "1.0.1",
+    "@radix-ui/react-toast": "1.1.2",
     "@vercel/analytics": "0.1.10",
-    "@radix-ui/react-menubar": "1.0.0",
-    "@radix-ui/react-dialog": "1.0.2"
+    "class-variance-authority": "0.4.0",
+    "classnames": "2.3.2",
+    "dagre": "0.8.5",
+    "lucide-react": "0.109.0",
+    "next": "13.1.6",
+    "openai": "3.2.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-use": "17.4.0",
+    "reactflow": "11.5.3",
+    "zustand": "4.3.2"
   },
   "devDependencies": {
-    "autoprefixer": "10.4.13",
+    "@types/dagre": "0.7.48",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "autoprefixer": "10.4.13",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "postcss": "8.4.21",
+    "prettier": "^2.8.4",
     "prisma": "4.9.0",
-    "typescript": "4.9.5",
     "tailwindcss": "3.2.4",
-    "@types/dagre": "0.7.48"
+    "typescript": "4.9.5"
   }
 }
