--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-dom": "18.2.0",
     "react-use": "17.4.0",
     "reactflow": "11.5.3",
-    "zustand": "4.3.2"
+    "zustand": "4.3.2",
+    "browser-fs-access": "0.33.0"
   },
   "devDependencies": {
     "@types/dagre": "0.7.48",
