--- a/package.json
+++ b/package.json
@@ -31,7 +31,13 @@
 		"react-use": "17.4.0",
 		"reactflow": "11.5.3",
 		"zustand": "4.3.2",
-		"browser-fs-access": "0.33.0"
+		"browser-fs-access": "0.33.0",
+		"@radix-ui/react-toggle-group": "1.0.3",
+		"@radix-ui/react-tooltip": "1.0.5",
+		"tailwindcss-radix": "2.8.0",
+		"@radix-ui/react-separator": "1.0.2",
+		"graphology": "0.25.1",
+		"font-color-contrast": "11.1.0"
 	},
 	"devDependencies": {
 		"@types/dagre": "0.7.48",
@@ -45,6 +51,7 @@
 		"prettier": "^2.8.4",
 		"prisma": "4.9.0",
 		"tailwindcss": "3.2.4",
-		"typescript": "4.9.5"
+		"typescript": "4.9.5",
+		"graphology-types": "0.24.7"
 	}
 }
